--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
     </style>
     <script>
-        const api_url = "http://localhost:3000/api/projects";
+        const api_url = "https://freelancing-projects.netlify.app:3000/api/projects";
         async function getapi(url) {
             const response = await fetch(url);
             var data = await response.json();
